--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 <ul>
 <li class="has-child active">
-<a href="index2.html">Home</a>
+<a href="index.html">Home</a>
 <!-- <i class="bi bi-chevron-down"></i> -->
 <!-- <ul class="sub-menu">
 <li><a href="index.html">Home 01</a></li>
@@ -300,7 +300,7 @@
 <div class="col-lg-6 or-1 wow animate fadeIn" data-wow-delay="200ms" data-wow-duration="1500ms">
 <div class="about-right layout2">
 <div class="banner-1">
-<img src="assets/img/img1.png" alt="">
+<img src="assets/img/t.gif" alt="">
 </div>
 <div class="banner-2">
 <!-- <img src="assets/img/about-baner-2.jpg" alt=""> -->
@@ -981,7 +981,7 @@
     <form action="https://formsubmit.co/4faf9eaffe304162ce46e95c3fb59b84" method="POST">
         <input type="text" name="_honey" style="display: none;" >
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_next" value="https://ikaashifmohideeen.github.io/cloudsite/suc.html">
+        <input type="hidden" name="_next" value="https://ikaashifmohideeen.github.io/Kim-s-Tech/sucess.html">
     <div class="row">
     <div class="col-12">
     <input type="text" name="name" placeholder="Enter your name">
