--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <link rel="stylesheet" href="assets/css/animate.min.css">
 
 <link rel="stylesheet" href="assets/css/style.css">
+<link rel="icon" type="image/x-icon" href="assets\img\logo.png">
 
 <title>Creasoft - Software and Digital Agency HTML Template</title>
 </head>
