--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="icon" type="image/x-icon" href="assets\img\logo.png">
 
-<title>Creasoft - Software and Digital Agency HTML Template</title>
+<title>Kims Tech</title>
 </head>
 <body>
 
